# bobbin

./: .gitignore  LICENSE  Makefile.am  README.md  THANKS  configure.ac
disk/: ProDOS_2_0_3.dsk  dos33init.dsk
examples/: all-chars.bas  amazing-run.bas  amazing.bas  count.bas  hello.int  reverse  ribbon.bas  test.int
roms/: fetch-roms.sh
src/: Makefile  Makefile.am  THANKS  ac-config.h.in  apple2.h  bobbin-internal.h  bobbin-readline.h  bobbin.c  cmd.c  config.c  cpu.c  debug.c  delay-pc.c  disasm.c  event.c  format.c  gen-help.awk  hook.c  iface-simple.c  iface-simple.h  lcase.bas  machine.c  main.c  mem.c  periph.c  sha-256.c  sha-256.h  sha256-verify.c  signal.c  test.bas  timetravel.c  timing.c  trace-prodos.c  trace.c  util.c  watch.c
src/format/: do.c  dsk.c  empty.c  nib.c
src/interfaces/: iface.c  pipe.c  simple.c  tty.c
src/periph/: disk2.c  smartport-hdd.c
src/roms/: fetch-roms.sh
src/scripts/: check-options.awk  gen-help.awk  gen-machines.awk  gen-names.awk  gen-options.awk
test/: Makefile.am  infloop.int
test/noninteract/: Makefile.am  run_tests.sh  trace-filter.awk
test/noninteract/add_nl_on_exit.t/: run
test/noninteract/assembly_list_eol.t/: run
test/noninteract/assembly_list_eol_enh_iie.t/: expected  input
test/noninteract/assembly_list_eol_orig.t/: expected  input  run
test/noninteract/bot_mode_monitor.t/: run
test/noninteract/bot_mode_w_run.t/: input
test/noninteract/bot_mode_wo_run.t/: expected  input  run
test/noninteract/detokenize.t/: expected  input  run
test/noninteract/disasm_enhanced_iie.t/: expected  input  run
test/noninteract/disasm_plus.t/: expected  input  run
test/noninteract/disk_do_rw.t/: expected  indisk.dsk  run  template.dsk
test/noninteract/disk_do_two.t/: expected  indisk-a.dsk  indisk-b.dsk  run
test/noninteract/disk_nib_rw.t/: expected  indisk.nib  run
test/noninteract/disk_two_prodos.t/: expected  indisk-a.dsk  indisk-b.dsk  run  testdisk-a.dsk  testdisk-b.dsk
test/noninteract/max_cycles.t/: expected  input  run
test/noninteract/midline_input.t/: expected  input
test/noninteract/prodos_203_iie_enh.t/: expected  run
test/noninteract/run_basic.t/: expected  reverse  run
test/noninteract/tokenize.t/: expected  input  run
test/noninteract/tokenize_linenum_disordered.t/: expected  input
test/noninteract/tokenize_repeat_linenum.t/: expected  input  run
test/noninteract/tokenize_syntax_err.t/: expected  input
test/noninteract/tokenize_unnumbered.t/: expected  input
test/pexpect/: Makefile.am  apple_iie.py  asoft.py  basics.py  bcd_detection.py  charset.py  common.py  cpu65c02.py  cpu_verification.py  debug.py  debug_80col_display.py  enhanced_detection.py  illegal_ops.py  mousetext.py  run_tests.py  tty_tests.py
test/tests6502/: 6502_decimal_test.ca65  6502_functional_test.ca65  65C02_extended_opcodes_test.ca65  65c02_bra_test.ca65  65c02_decimal_test.ca65  65c02_direct_test.ca65  65c02_minimal_test.ca65  65c02_stack_test.ca65  65c02_stz_test.ca65  65c02_test_common.inc  Makefile  Makefile.am  asm_cmp.sh  decimal_test_common.inc  enhanced_iie_test.ca65  language_card.ca65  readme.txt  test.rom
